// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c1 {
  -webkit-animation-delay: 0;
  animation-delay: 0;
  fill: #72af5d;
}

.c2 {
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  fill: #17a3a5;
}

.c3 {
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  fill: #ebc764;
}

.c0 {
  position: relative;
  display: block;
  overflow: hidden;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="sc-AxjAm c1"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="sc-AxjAm c2"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="sc-AxjAm c3"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works animated 1`] = `
.c1 {
  -webkit-animation: dTTrEC;
  animation: dTTrEC;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0;
  animation-delay: 0;
  fill: #72af5d;
}

.c2 {
  -webkit-animation: fOlPOW;
  animation: fOlPOW;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  fill: #17a3a5;
}

.c3 {
  -webkit-animation: kJzVPa;
  animation: kJzVPa;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  fill: #ebc764;
}

.c0 {
  position: relative;
  display: block;
  overflow: hidden;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="sc-AxjAm c1"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="sc-AxjAm c2"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="sc-AxjAm c3"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works thinking 1`] = `
.c1 {
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  animation-delay: 0;
  fill: #72af5d;
}

.c2 {
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  fill: #17a3a5;
}

.c3 {
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  fill: #ebc764;
}

.c0 {
  position: relative;
  display: block;
  overflow: hidden;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="sc-AxjAm c1"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="sc-AxjAm c2"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="sc-AxjAm c3"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works with different colours 1`] = `
.c1 {
  fill: #111;
  -webkit-animation-delay: 0;
  animation-delay: 0;
  fill: #72af5d;
}

.c2 {
  fill: #222;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  fill: #17a3a5;
}

.c3 {
  fill: #333;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  fill: #ebc764;
}

.c0 {
  position: relative;
  display: block;
  overflow: hidden;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="sc-AxjAm c1"
    color="#111"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="sc-AxjAm c2"
    color="#222"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="sc-AxjAm c3"
    color="#333"
    points="16,0 16,32 32,16"
  />
</svg>
`;
